--- a/config-server/config/application.yml
+++ b/config-server/config/application.yml
@@ -1,11 +1,12 @@
+server:
+  port: 8888
+
 spring:
+  application:
+    name: config-server
+
   cloud:
     config:
       server:
         native:
           search-locations: file:./config
-  profiles:
-    active: native
-
-server:
-  port: 8888
